[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bugsuite"
version = "2.0.0"
description = "Analisador de bugs com relatório PDF e guia de debug"
requires-python = ">=3.10"
authors = [{name = "NablaTester"}]

[project.scripts]
bugsuite = "bugsuite.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]
