[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nablatester"
version = "2.0.0"
description = "Analisador de bugs com relatório PDF e guia de debug"
requires-python = ">=3.10"
authors = [{name = "NablaTester"}]

[project.scripts]
nablatester = "nablatester.cli:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nablatester = ["rules/*.json", "rules/*.yaml", "rules/*.yml"]
